# lighting-chatbot

./: .gitignore  Model Comparison for Structured Extraction.md  README.md  Trace Analysis.md  pyproject.toml  requirements.txt
data/: README.md  product_schema.json
data/spec_sheets_text/indoor/: CDR Version B LED Downlight Spec Sheet.txt  CR Series Version B Architectural Troffer Spec Sheet.txt  CR4T LED DownLight Spec Sheet.txt  CR6T LED DownLight Spec Sheet.txt  CR6T-G LED Gimbal Down Light Spec Sheet.txt  Cadiant Dynamic Skylight w-Lutron Athena Spec Sheet.txt  Essentia Series 4-in Round LED Downlight Spec Sheet.txt  Essentia Series 6-in Round LED Downlight Spec Sheet.txt  Essentia Series Large Flat Back Track Spec Sheet Version B (S-CT-FB-B).txt  Essentia Series Mini Cylinder Track Head Spec Sheet Version B (S-CT-CYL-B).txt  Essentia Series Track Accessories Spec Sheet.txt  Essentia® Series One & Two-Circuit Track Spec Sheet.txt  FLX Gen II Series Troffer Spec Sheet-3.txt  HXB Series Version C LED High Bay Luminaire Spec Sheet.txt  KBL Series (Version C) High-Bay Low-Bay Spec Sheet.txt  KR Gen II 4-Inch and 6-Inch Round and Square LED Downlight Spec Sheet - KR4 & KR6 Gen II LED Round & Square Downlight Spec Sheet.txt  LR4X LED Retrofit Downlight Spec Sheet.txt  LR6X LED Retrofit Downlight Spec Sheet.txt  SD Series Slim LED Downlights Spec Sheet.txt  (+13 more)
prompts/: greeting_prompt.txt  system_prompt.txt
scripts/: embed_extracted_text.py  extract_text_from_pdfs.py  run_chatbot.py  structured_specs.py
src/lighting_chatbot/: prompt_loader.py  unstructured_rag_chatbot.py
