[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lighting-chatbot"
version = "0.1.0"
description = ""
authors = [{name = "Michael Kranzlein"}]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
packages = ["lighting_chatbot"]
package-dir = {"" = "src"}  # https://setuptools.pypa.io/en/latest/userguide/package_discovery.html